# CodingForFun

./: README.md
1行代码实现矩阵相乘/: MatrixMluOneLine.scala
A*算法求解8数码问题/: A-Star.scala  README.md
AffineTransformationEx/: README.md
AffineTransformationEx/Cpp/: AffiEx.cpp  CMakeLists.txt  run.sh
AffineTransformationEx/Python/: affiex.py  run.sh
AffineTransformationEx/Scala/: build.sbt  run.sh
AffineTransformationEx/Scala/src/main/scala/: Affiex.scala
AndroidJump/: README.md
AndroidJump/DoodleJump/: .project
AndroidJump/DoodleJump/res/anim/: anim_hide_to_show.xml  anim_show_to_hide.xml
AndroidJump/DoodleJump/res/layout/: main.xml
AndroidJump/DoodleJump/res/values/: strings.xml
AndroidJump/DoodleJump/src/ldp/games/doodlejump/: Constants.java  DoodleJumpActivity.java  GameView.java  LogicManager.java  OBjectsManager.java
Jacobi迭代法并行求解线性方程组/: Jacobi.scala  README.md
SM3密码杂凑算法/: README.md  sm3.scala
einsum_ex/: einsum_cpp_explain.cpp  ex10_outer_product.py  ex11_batch_matrix_multiply.py  ex12_tensor_contraction.py  ex13_bilinear_transformation.py  ex1_1_matrix_diagonal_extraction.py  ex1_2_transpose.py  ex1_3_permute.py  ex2_reduce_sum.py  ex3_column_sum.py  ex5_matrix_vector_mul.py  ex6_matrix_matrix_mul.py  ex7_vector_dot_product.py  ex8_hadamard_product_and_sum.py
在代码中写WTF/: fk.scala
并行求解n皇后问题/: N-Queens-Parallel.scala
抓取开源中国的资讯页面的新闻列表/: README.md  pachong.scala
算法-----烙饼排序/: README.md  laobin.scala
类型通用的归并排序/: mergeSort.scala
遗传算法计算一元函数极值/: README.md  yichuanSuanfa.scala
(+32 files in other folders)
